# sa-shared

./: README.md
.github/workflows/: mlops01-dab-dev.yml
dab/mlops01/: README.md  databricks.yml  pyproject.toml  requirements-dev.txt  setup.py
dab/mlops01/resources/: ml-artifacts.yml  mlops01.job.yml
dab/mlops01/src/: notebook.ipynb
dab/mlops01/src/wheel01/: train.py
dab/mlops01/tests/: main_test.py
databricks-sdk/: ListAllNotebooks.py
iot/: EventHubsDLT.py  EventHubsSpark.py  TestNetwork.py
metadata/: MetadataFramework.py  PythonicFramework.py
metadata/config/: customer.schema.json  customer.spec.yaml  sales.schema.json  sales.spec.yaml
pyspark-datasource/: ExcelDataSource.py
